@@ -11,6 +11,8 @@
 
   o CHANGE:  Solid model lighting adjusted
 
+  o CHANGE:  The Flexible? conformer-generation checkbutton repositioned
+
   o BUG-FIX: Colour by B-factor and Occupancy modes restored [Hans Raaijmakers]
 
   o BUG-FIX: network interface to Drugbank follows server changes
@@ -22,6 +24,8 @@
   o BUG-FIX: Use XYP not XYL for carbohydrate tree additions
 
   o BUG-FIX: Restore missing waters in FLEV
+
+  o BUG-FIX: Fix crash on conformer search with no dictionary [JED]
 
 ------
 
